Fix possible bugs with 5Ghz support, rework console-like fragments, other minor code fixes, update version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,7 +139,7 @@
     <string name="show_ap">Show Access Points</string>
     <string name="show_st">Show Stations</string>
     <string name="show_st_na">Show non-associated stations</string>
-    <string name="channels">Channels:</string>
+    <string name="channels">2.4Ghz Channels:</string>
     <string name="all">All</string>
     <string name="opn">OPN</string>
     <string name="sort">Sort:</string>
